<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/underpresent"
    tools:context=".FinalActivity2">




    <TextView
        android:id="@+id/Fianl_Page_titile"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="20dp"
        android:text="@string/Title_For_for_Final_Deal"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="italic|bold"

        android:layout_alignParentRight="true"
        android:layout_marginRight="99dp"
        android:gravity="center_horizontal" />



    <LinearLayout
        android:id="@+id/final_linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Fianl_Page_titile"
        android:layout_marginTop="0dp"
        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rec_Nam_Ask_For_Final_Deal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:id="@+id/Final_Message_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rec_Nam_For_Final_Deal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="40dp"

            />


    </LinearLayout>






















    <LinearLayout
        android:id="@+id/final_linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/final_linear_layout_1"
        android:layout_marginTop="0dp"

       >



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rec_Addre_Ask_For_Final_Deal"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="#8A0808"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"

        />

    <TextView
        android:id="@+id/Final_address_variable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rec_Addre_For_Final_Deal"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#8A0808"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"

        />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/final_linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/final_linear_layout_2"
        android:layout_marginTop="0dp"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gift_Pay_Ask_For_Final_Deal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:id="@+id/Goods_pay_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gift_Pay_For_Final_Deal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="80dp"

            />





    </LinearLayout>






    <LinearLayout
        android:id="@+id/final_linear_layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/final_linear_layout_3"
        android:layout_marginTop="0dp"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rap_Pay_Ask_For_Final_Deal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:id="@+id/Wrapping_pay_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rap_Pay_For_Final_Deal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"

            />





    </LinearLayout>

    <LinearLayout
        android:id="@+id/final_linear_layout_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/final_linear_layout_4"
        android:layout_marginTop="0dp"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trans_Pay_Ask_For_Final_Deal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:id="@+id/Transport_pay_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Trans_Pay_For_Final_Deal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"

            android:layout_marginLeft="20dp"

            />






    </LinearLayout>





    <LinearLayout
        android:id="@+id/final_linear_layout_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/final_linear_layout_5"
        android:layout_marginTop="0dp"

        >



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tot_Pay_Ask_For_Final_Deal"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"

            />

        <TextView
            android:id="@+id/Total_pay_variable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Tot_Pay_For_Final_Deal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="#8A0808"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"

            android:layout_marginLeft="80dp"

            />






    </LinearLayout>
    <Button
        android:id="@+id/Edit_Final_Details_btn"

        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rkbuttons"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/Edit_Rec_Button_For_Final_Deal"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat"
        android:layout_below="@id/final_linear_layout_6"
        android:layout_marginTop="5dp"
        android:textStyle="italic|bold"

        />

    <Button
        android:id="@+id/Cancel_Whole_Details_btn"

        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rkbuttons"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/Cancel_deal_Button_For_Final_Deal"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat"
        android:layout_below="@+id/Edit_Final_Details_btn"
        android:layout_marginTop="5dp"
        android:textStyle="italic|bold"

        />


    <Button
        android:id="@+id/Fial_Ok_btn"

        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rkbuttons"
        android:padding="5dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/Send_Pre_Butt0n_For_Final_Deal"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat"
        android:layout_below="@+id/Cancel_Whole_Details_btn"
        android:layout_marginTop="5dp"
        android:textStyle="italic|bold"

        />




</RelativeLayout>