<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cloudyback"
    tools:context=".SettingsActivity2">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Close_settings_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Close_Button_for_edit_profile"
                    android:textColor="#8A0808"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"></TextView>



                <TextView
                    android:id="@+id/update_Account_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Update_Button_for_edit_profile"
                    android:textColor="#8A0808"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    ></TextView>



            </RelativeLayout>





        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/settings_profile_Image"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/profile"
        android:layout_below="@id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/Profile_image_change_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Change_Profile_Link_for_edit_profile"
        android:layout_marginTop="5dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="140dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/settings_profile_Image"
        ></TextView>

    <EditText
        android:id="@+id/settings_Phone_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Profile_image_change_btn"
        android:hint="@string/Phoone_Number_for_edit_profile"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"

        android:padding="10dp"
        android:background="@drawable/rkinputs"
        android:textColor="#8A0808"
        android:textColorHint="#6E6E6E"
        android:textSize="20sp"
        android:textStyle="italic|bold" >

    </EditText>


    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_Phone_Number"
        android:hint="@string/Full_Name_for_edit_profile"
        android:layout_margin="10dp"

        android:padding="10dp"
        android:background="@drawable/rkinputs"
        android:textColor="#8A0808"
        android:textColorHint="#6E6E6E"
        android:textSize="20sp"
        android:textStyle="italic|bold" >


    </EditText>



    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_full_name"
        android:hint="@string/Address_for_edit_profile"
        android:layout_margin="10dp"

        android:padding="10dp"
        android:background="@drawable/rkinputs"
        android:textColor="#8A0808"
        android:textColorHint="#6E6E6E"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        >


    </EditText>

    <EditText
        android:id="@+id/Setting_Bank_Account_Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_address"
        android:hint="@string/Ban_Acc_No_for_edit_profile"
        android:layout_margin="10dp"

        android:padding="10dp"
        android:background="@drawable/rkinputs"
        android:textColor="#8A0808"
        android:textColorHint="#6E6E6E"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        >


    </EditText>


    <EditText
        android:id="@+id/Setting_Bank_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Setting_Bank_Account_Number"
        android:hint="@string/Bank_Name_for_edit_profile"
        android:layout_margin="15dp"

        android:padding="15dp"
        android:background="@drawable/rkinputs"
        android:textColor="#8A0808"
        android:textColorHint="#6E6E6E"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        >


    </EditText>

</RelativeLayout>