<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/CuteGpk"
    tools:context=".LoginActivity2">


    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="400pt"
        android:layout_height="100pt"
        android:backgroundTintMode="add"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/Present"/>

    <EditText
        android:id="@+id/login_phone_number_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_applogo"
        android:background="@drawable/rkinputs"
        android:padding="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/Phone_number_for_Login"
        android:inputType="number"
        android:textColor="#8A0808"
        android:textColorHint="#8A0808"
        android:textSize="20sp"
        android:textStyle="italic|bold"

        ></EditText>


    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_number_input"
        android:background="@drawable/rkinputs"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="@string/Password_for_Login"
        android:textColor="#8A0808"
        android:textColorHint="#8A0808"
        android:textSize="20sp"
        android:textStyle="italic|bold"
        android:inputType="textPassword"
        ></EditText>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        >

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Remember_Me_tag_for_Login"
        android:layout_marginLeft="30dp"
        android:textColor="#8A0808"
        android:textSize="17sp"
        android:textStyle="bold"
        android:id="@+id/check_boxrk_1"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Forgrct_Password_Link_for_Login"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="#8A0808"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
          android:layout_marginLeft="55dp"

    />






    </LinearLayout>
    <Button
        android:id="@+id/login_btn"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rkbuttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:text="@string/Login_Button_for_Login"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat"
        android:layout_below="@id/linear_layout_1"
        android:layout_marginTop="5dp"
        android:textStyle="italic|bold"

        />


</RelativeLayout>